--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                     <li><a href="user.html">我的文的</a></li>
                     <li>|</li>
                     <li><a href="shop_cart.html">购物车</a><sup>{{cartCount}}</sup></li>
-                    <li>|</li>
+                    <!-- <li>|</li>
                     <li>
                         <a href="javascript:void(0)"><img src="images/favorite_icon.png" alt="">收藏夹</a>
                     </li>
-                    <li><a href="javascript:void(0)">服务中心</a></li>
+                    <li><a href="javascript:void(0)">服务中心</a></li> -->
                 </ul>
             </div>
         </div>
@@ -176,7 +176,7 @@
             <h3><a href="shop_list.html">最新商品</a></h3>
             <ul>
                 <li>
-                    <a href="pro_details.html"><img src="images/ad_new.png" alt=""></a>
+                    <a href="pro_details.html?proId=1"><img src="images/ad_new.png" alt=""></a>
                 </li>
                 <li v-for="(pro,i) in proList">
                     <a :href="'pro_details.html?proId='+pro.goods_id"><img :src="imgServer+pro.goods_img[0]" alt=""></a>
@@ -186,7 +186,7 @@
                         <p class="member_price">￥ 会员价：<span>{{pro.goods_price}}</span></p>
                     </div>
                 </li>
-                <!-- <li>
+                <li>
                     <a href="pro_details.html"><img src="images/pro4.png" alt=""></a>
                     <div>
                         <h4><a href="pro_details.html">3l双胆智能预约电高压锅正品</a></h4>
@@ -194,7 +194,7 @@
                         <p class="member_price">￥ 会员价：<span>399.00</span></p>
                     </div>
                 </li>
-                <li>
+               <!--  <li>
                     <a href="pro_details.html"><img src="images/pro5.png" alt=""></a>
                     <div>
                         <h4><a href="pro_details.html">1.6L黄金蜂窝内胆 智能预约</a></h4>
@@ -554,7 +554,7 @@
                 <span><a href="#">你的购物管家</a></span>
             </li>
         </ul>
-        <div class="footer_main">
+        <!-- <div class="footer_main">
             <dl>
                 <dt>购物指南</dt>
                 <dd><a href="javascript:void(0)">购物需知</a></dd>
@@ -595,7 +595,7 @@
                     <img src="images/msg_icon.png" alt=""> 24小时客服热线
                 </a>
             </div>
-        </div>
+        </div> -->
         <div class="copyright" id="fcopyright">
             <p class="containe">
                 {{footerText}}
